Apply IDE suggestions, deprecations, ...